--- a/pc_central/config_central.json
+++ b/pc_central/config_central.json
@@ -1,7 +1,14 @@
 {
+  "pcName": "pc7222",
   "networkBackupPath": "\\\\fitxers3\\fitxers\\__Caracteritzacio Electrica_ICTS\\_BACKUPS",
   "localMirrorPath": "F:\\BACKUPS\\_BACKUPS",
   "logPath": "C:\\BackupCentral\\logs",
   "pcsToCopy": ["pc471", "pc684", "pc6132"],
-  "deleteAfterCopy": false
+  "deleteAfterCopy": false,
+  "folders": [
+    {
+      "name": "Medidas",
+      "source": "D:\\Documentos\\MESURES"
+    }
+  ]
 }
