--- a/pc_central/config_central.json
+++ b/pc_central/config_central.json
@@ -8,7 +8,8 @@
   "folders": [
     {
       "name": "Medidas",
-      "source": "D:\\Documentos\\MESURES"
+      "source": "D:\\Documentos\\MESURES",
+      "compress": false
     }
   ]
 }
