--- a/pc_central/config_central.json
+++ b/pc_central/config_central.json
@@ -2,6 +2,7 @@
   "pcName": "pc7222",
   "networkBackupPath": "\\\\fitxers3\\fitxers\\__Caracteritzacio Electrica_ICTS\\_BACKUPS",
   "localMirrorPath": "F:\\BACKUPS\\_BACKUPS",
+  "sevenZip": "C:\Program Files\7-Zip\7z.exe",
   "logPath": "C:\\BackupCentral\\logs",
   "pcsToCopy": ["pc471", "pc684", "pc6132"],
   "deleteAfterCopy": false,
